base/zulip/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: zulip
  labels:
    app: zulip
  spec:
    containers:
    - name: zulip
      image: "zulip/docker-zulip"
      version: latest
      imagePullPolicy: IfNotPresent
      ports:
        - name: http
          containerPort: 80
          protocol: TCP
      resources: {}
